Wheels instead of Greetings

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
     <packaging>war</packaging>
 
+    <!--FIXME 2 Upgrade versions-->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
