--- a/pom.xml
+++ b/pom.xml
@@ -14,20 +14,20 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.8.RELEASE</version>
+        <version>2.6.2</version>
         <relativePath/>
     </parent>
 
     <properties>
-        <commons-io.version>2.6</commons-io.version>
-        <commons-lang.version>3.9</commons-lang.version>
+        <commons-io.version>2.11.0</commons-io.version>
+        <commons-lang.version>3.12.0</commons-lang.version>
         <cucumber.version>4.7.2</cucumber.version>
         <lombok.version>1.18.10</lombok.version>
         <java.version>11</java.version>
         <junit.version>4.12</junit.version>
         <maven.build.helper.plugin.version>3.0.0</maven.build.helper.plugin.version>
         <maven.failsafe.plugin.version>3.0.0-M3</maven.failsafe.plugin.version>
-        <maven.surefire.plugin.version>3.0.0-M3</maven.surefire.plugin.version>
+        <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>
         <mockito.version>3.3.0</mockito.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
