--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+
         <!--Spring Boot Test-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
