--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,33 +1,33 @@
 # Spring
-spring.main.banner-mode: "off"
+spring:
+  main.banner-mode: "off"
+  jmx.enabled: false
 
 # Log
 logging:
-  level.: WARN
   level.org:
-      hibernate:
-        SQL: WARN
-        type:
-          descriptor.sql.BasicBinder: WARN
-          value: WARN
+    hibernate:
+      SQL: WARN
+      type:
+        descriptor.sql.BasicBinder: WARN
         value: WARN
-      springframework.web: WARN
-
-spring.jpa:
-  show-sql: false
-  properties.hibernate.format_sql: false
-  open-in-view: false
+      value: WARN
+    springframework:
+      web: WARN
 
 # Server
 server:
   port: 8080
 
 # H2 Database
-spring:
-  datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    username: sa
-    password:
+spring.datasource:
+  driverClassName: org.h2.Driver
+  url: jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+  username: sa
+  password:
+
+spring.jpa:
+  show-sql: false
+  open-in-view: false
 
 
