--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,10 @@
 # Spring
-spring.main.banner-mode: "off"
+spring:
+  main.banner-mode: "off"
+  jmx.enabled: false
 
 # Log
 logging:
-  level.: WARN
   level.org:
       hibernate:
         SQL: WARN
@@ -13,20 +14,19 @@ logging:
         value: WARN
       springframework.web: WARN
 
-spring.jpa:
-  show-sql: false
-  open-in-view: false
-
 # Server
 server:
   port: 8080
 
 # H2 Database
-spring:
-  datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    username: sa
-    password:
+spring.datasource:
+  driverClassName: org.h2.Driver
+  url: jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+  username: sa
+  password:
+
+spring.jpa:
+  show-sql: false
+  open-in-view: false
 
 
