--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,8 @@
         <maven.build.helper.plugin.version>3.4.0</maven.build.helper.plugin.version>
         <maven.failsafe.plugin.version>3.1.2</maven.failsafe.plugin.version>
         <maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>
-        <mockito.version>5.4.0</mockito.version>
+        <mockito.version>5.2.0</mockito.version>
+        <mockito.powermock.version>2.0.9</mockito.powermock.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!--Backend-->
@@ -104,8 +105,15 @@
         <!--Mockito-->
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
+            <artifactId>mockito-inline</artifactId>
             <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito2</artifactId>
+            <version>${mockito.powermock.version}</version>
             <scope>test</scope>
         </dependency>
 
