--- a/pom.xml
+++ b/pom.xml
@@ -13,26 +13,27 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.14</version>
+        <version>2.7.18</version>
         <relativePath/>
     </parent>
 
     <properties>
         <start-class>quebec.virtualite.backend.Application</start-class>
 
-        <cucumber.version>7.11.1</cucumber.version>
-        <junit.version>4.13.2</junit.version>
+        <cucumber.version>7.21.1</cucumber.version>
+        <junit5.version>5.11.4</junit5.version>
+        <junit5-platform.version>1.11.4</junit5-platform.version>
         <kotlin.version>1.8.10</kotlin.version>
-        <maven.build.helper.plugin.version>3.3.0</maven.build.helper.plugin.version>
-        <maven.failsafe.plugin.version>3.0.0-M9</maven.failsafe.plugin.version>
-        <maven.surefire.plugin.version>3.0.0-M9</maven.surefire.plugin.version>
-        <mockito.version>5.1.1</mockito.version>
+        <maven.build.helper.plugin.version>3.4.0</maven.build.helper.plugin.version>
+        <maven.failsafe.plugin.version>3.1.2</maven.failsafe.plugin.version>
+        <maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>
+        <mockito.version>5.2.0</mockito.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!--Backend-->
         <flyway.version>9.21.0</flyway.version>
         <h2.version>2.1.214</h2.version>
-        <rest-assured.version>5.3.0</rest-assured.version>
+        <rest-assured.version>5.3.1</rest-assured.version>
     </properties>
 
     <dependencies>
@@ -66,28 +67,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-undertow</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context-indexer</artifactId>
-            <optional>true</optional>
         </dependency>
 
         <!--        <dependency>-->
-        <!--            <groupId>org.springframework.boot</groupId>-->
-        <!--            <artifactId>spring-boot-starter-actuator</artifactId>-->
+        <!--            <groupId>org.springframework</groupId>-->
+        <!--            <artifactId>spring-context-indexer</artifactId>-->
+        <!--            <optional>true</optional>-->
         <!--        </dependency>-->
 
         <dependency>
@@ -123,7 +108,7 @@
 
         <dependency>
             <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-junit</artifactId>
+            <artifactId>cucumber-junit-platform-engine</artifactId>
             <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
@@ -135,11 +120,18 @@
             <scope>test</scope>
         </dependency>
 
-        <!--JUnit-->
+        <!--JUnit5-->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit5.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite</artifactId>
+            <version>${junit5-platform.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -235,13 +227,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.surefire</groupId>
-                        <artifactId>surefire-junit47</artifactId>
-                        <version>${maven.surefire.plugin.version}</version>
-                    </dependency>
-                </dependencies>
+                <!--                <dependencies>-->
+                <!--                    <dependency>-->
+                <!--                        <groupId>org.apache.maven.surefire</groupId>-->
+                <!--                        <artifactId>surefire-junit47</artifactId>-->
+                <!--                        <version>${maven.surefire.plugin.version}</version>-->
+                <!--                    </dependency>-->
+                <!--                </dependencies>-->
             </plugin>
 
             <!--Support for integration testing-->
@@ -249,13 +241,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${maven.failsafe.plugin.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.surefire</groupId>
-                        <artifactId>surefire-junit47</artifactId>
-                        <version>${maven.surefire.plugin.version}</version>
-                    </dependency>
-                </dependencies>
+                <!--                <dependencies>-->
+                <!--                    <dependency>-->
+                <!--                        <groupId>org.apache.maven.surefire</groupId>-->
+                <!--                        <artifactId>surefire-junit47</artifactId>-->
+                <!--                        <version>${maven.surefire.plugin.version}</version>-->
+                <!--                    </dependency>-->
+                <!--                </dependencies>-->
                 <executions>
                     <execution>
                         <goals>
