--- a/pom.xml
+++ b/pom.xml
@@ -24,16 +24,17 @@
         <junit5.version>5.11.4</junit5.version>
         <junit5-platform.version>1.11.4</junit5-platform.version>
         <kotlin.version>1.8.10</kotlin.version>
-        <maven.build.helper.plugin.version>3.4.0</maven.build.helper.plugin.version>
-        <maven.failsafe.plugin.version>3.1.2</maven.failsafe.plugin.version>
-        <maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>
+        <maven.build.helper.plugin.version>3.6.0</maven.build.helper.plugin.version>
+        <maven.failsafe.plugin.version>3.5.2</maven.failsafe.plugin.version>
+        <maven.surefire.plugin.version>3.5.2</maven.surefire.plugin.version>
         <mockito.version>5.2.0</mockito.version>
+        <file.encoding>CP852</file.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!--Backend-->
-        <flyway.version>9.21.0</flyway.version>
-        <h2.version>2.1.214</h2.version>
-        <rest-assured.version>5.3.1</rest-assured.version>
+        <flyway.version>11.3.1</flyway.version>
+        <h2.version>2.2.224</h2.version>
+        <rest-assured.version>5.5.0</rest-assured.version>
     </properties>
 
     <dependencies>
