--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # Spring
 spring:
   main.banner-mode: "off"
-  jmx.enabled: false
+  jmx.enabled: false    # Speed up server startup
 
 # Log
 logging:
@@ -12,8 +12,7 @@ logging:
         descriptor.sql.BasicBinder: WARN
         value: WARN
       value: WARN
-    springframework:
-      web: WARN
+      springframework.web: WARN
 
 # Server
 server:
@@ -29,5 +28,8 @@ spring.datasource:
 spring.jpa:
   show-sql: false
   open-in-view: false
-
-
+  properties:
+    hibernate:
+      cache:
+        use_second_level_cache: false   # Speed up server startup
+        use_query_cache: false          # Speed up server startup
